# assisted-service-mcp

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py  template.yaml
.github/workflows/: black.yaml  build.yaml  mypy.yaml  outdated_dependencies.yaml  pydocstyle.yaml  pylint.yaml  pyright.yaml  ruff.yaml  unit_tests.yaml
.tekton/: assisted-service-mcp-saas-main-pull-request.yaml  assisted-service-mcp-saas-main-push.yaml
service_client/: __init__.py  assisted_service_api.py  logger.py
tests/: __init__.py  test_assisted_service_api.py  test_server.py  test_utils.py
