[project]
name = "assisted-service-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assisted-service-client>=2.41.0.post3",
    "fastmcp>=2.8.0",
    "netaddr>=1.3.0",
    "requests>=2.32.3",
    "retry>=0.9.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "ruff>=0.12.1",
]
