[project]
name = "assisted-service-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assisted-service-client>=2.41.0.post3",
    "fastmcp>=2.8.0",
    "netaddr>=1.3.0",
    "requests>=2.32.3",
    "retry>=0.9.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "ruff>=0.12.1",
]

[tool.pylint.main]
ignore-paths = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",  # We'll add these selectively
    "missing-class-docstring",   # We'll add these selectively
    "missing-function-docstring", # We'll add these selectively
    "too-few-public-methods",    # Common in utility classes
    "line-too-long",            # Handled by black
    "broad-exception-caught",   # Sometimes necessary
]
